--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
     "react-native-screens": "~4.11.1",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
