--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "joi": "^17.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
