--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
-    "expo": "~51.0.0",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~54.0.10",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^12.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-web": "~0.19.10"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   }
 }
