--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^17.2.2",
+    "express": "^4.19.2",
+    "firebase-admin": "^13.5.0",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
