--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "expo": "~54.0.10",
+    "expo-navigation-bar": "~5.0.8",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.2.1",
     "react": "19.1.0",
