--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "expo": "~54.0.10",
+    "expo-image-picker": "^17.0.8",
     "expo-navigation-bar": "~5.0.8",
     "expo-status-bar": "~3.0.8",
-    "firebase": "^12.2.1",
+    "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
